Support callbacks that accept GErrors

Some async callbacks don't follow the GIO pattern and instead of
having a finish function, they embed the error directly in the
callback signature. Add support for that by wrapping the GError as
a boxed type.

https://bugzilla.gnome.org/show_bug.cgi?id=618193